--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:LQpdWIMbBpzSzxXQiok0qjidOj07bbRhanYf3f11v70=
+APP_KEY=base64:oGE+1MEX+yLxinb8MbceWrx0HnNddsHva/onXIKK9mE=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -28,7 +28,7 @@ DB_CONNECTION=pgsql
  DB_USERNAME=nebus
  DB_PASSWORD=nebus
 
-SESSION_DRIVER=database
+SESSION_DRIVER=array
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
