--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "darkaonline/l5-swagger": "^8.6",
+        "illuminate/session": "*",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9"
     },
